uvasds-services/templates/uvasds/fastapi-demo/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: fastapi-demo-nginx-ingress
  namespace: uvasds-services
spec:
  rules:
  - host: fastapi-demo.pods.uvarc.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fastapi-demo-service
            port:
              number: 8080
